# erh_llm

./: Cargo.toml  LICENSE  README.md
llm_o/: documentation.rs  mod.rs  prompter.rs
qwen-rs/: Cargo.toml  README.md
qwen-rs/src/: chat.rs  lib.rs  model.rs  reasoning.rs  tool.rs
src/: composer.rs  config.rs  history.rs  lib.rs  prompter.rs  tools.rs
src/components/: mod.rs  prompt.rs  resource.rs  sampling.rs  tools.rs
src/history/: mem.rs  mod.rs  mssql.rs  mysql.rs  sqlite.rs
